--- a/build.gradle
+++ b/build.gradle
@@ -19,5 +19,9 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile "com.sparkjava:spark-core:2.7.2"
     compileOnly 'org.projectlombok:lombok:1.18.2'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '0.9.26'
     compile 'org.apache.httpcomponents:httpclient:4.5'
+    compile 'org.postgresql:postgresql:9.4.1212'
+    compile group: 'org.json', name: 'json', version: '20180130'
 }
